# Discord_Lobbies_SDK

./: .gitattributes  .gitignore  .vscodeignore  DEVELOPER_NOTES.md  LICENSE  PRIVACY_POLICY.md  README.md  ROADMAP.md  TERMS_OF_USE.md  auto.sh  clean_up.sh  discord-lobbies-sdk-0.0.3.vsix  lobbies-sdk-0.0.2.vsix  lobbies-sdk-0.0.3.vsix  lobbies-sdk.vsix  logo-preview.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: README.md  build-all-platforms.yml  build-macos-binaries.yml
media/: logo.svg.bak
native/: .gitignore  README.md  binding.gyp  find-sdk.js  fix-toolset.js  index.js  package-lock.json  package.json
native/src/: discord_client.cc  discord_client.h  discord_client_new.cc  discord_social_sdk.cc  message_handler.cc
rust-native/: Cargo.toml  Makefile  README.md  build.rs  package.json  test_init.sh  test_subprocess.sh
rust-native/src/: lib.rs  main.rs  main_improved.rs  napi_bridge.rs
src/: extension.ts  polyfill.ts
src/commands/: connectLobbyVoice.ts  createLobby.ts  inviteToLobby.ts  joinLobby.ts  leaveLobby.ts  listLobbies.ts  quickAccess.ts  readMessages.ts  sendCodeToLobby.ts  sendDMToFriend.ts  sendLobbyMessage.ts  voiceLobby.ts
src/gateway/: discordClient.ts  discordGateway.ts  discordGatewayClient.ts
src/handlers/: commandHandler.ts
src/services/: DiscordSDKAdapter.ts  auth.ts  discordRPC.ts  discordSDKSubprocess.ts  discordSocialSDK.ts  discordSubprocess.ts  dmMessagePoller.ts  gateway.ts  lobbyMessagePoller.ts  messageAPI.ts  oauthCallbackServer.ts  relayAPI.ts  relayMessagePoller.ts  richPresence.ts  (+3 more)
(+25 files in other folders)
